Start refactor for IT